<resources>
    <string name="app_name">COMP304_002_Assignment4</string>
    <string name="audience">Audience</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="userName">Username</string>
    <string name="pw">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="user_name">USERNAME*</string>
    <string name="first_name">FIRST NAME*</string>
    <string name="last_name">LAST NAME*</string>
    <string name="email">EMAIL*</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="pw_intro">CHOOSE A PASSWORD*</string>
    <string name="pw_confirm">CONFIRM PASSWORD*</string>
    <string name="intro">( * means required input fields)</string>
    <string name="confirm_register">Sign Up For MarvelRama</string>
    <string name="user_validation">Cannot include space between characters</string>
    <string name="user_repeat">Username already exists</string>
    <string name="email_validation">invalid email format</string>
    <string name="email_repeat">Email ID is already registered</string>
    <string name="first_validation">First name is required</string>
    <string name="last_validation">Last name is required</string>
    <string name="pw_validation">6-20 characters, at least one uppercase, lowercase, special symbol</string>
    <string name="pwcon_validation">Must be the same as the password above</string>
    <string name="personInfo">Personal Information</string>
    <string name="userId">User ID:</string>
    <string name="name">Name:</string>
    <string name="emailAd">Email ID:</string>
    <string name="addressCom">Address:</string>
    <string name="password">Password:</string>
    <string name="update">Update Info</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username_login">Username does not exist</string>
    <string name="pw_login">Password is not correct</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string-array name="admin_home">
        <item>Manage Movies Information</item>
        <item>Manage Audience Information</item>
        <item>Manage Booking Information</item>
    </string-array>

    <string-array name="dateOfMovie">
        <item>TODAY, March 11</item>
        <item>Tuesday, March 12</item>
        <item>Wednesday, March 13</item>
        <item>Thursday, March 14</item>
        <item>Friday, March 15</item>
        <item>Saturday, March 16</item>
        <item>Sunday, March 17</item>
    </string-array>

    <string name="showtime">Select Showtime</string>
    <string name="showtime1">12:50 pm</string>
    <string name="showtime2">2:15 pm</string>
    <string name="showtime3">4:45 pm</string>
    <string name="showtime4">6:50 pm</string>
    <string name="showtime5">8:50 pm</string>
    <string name="aqua_intro">Intro: Half-human, half-Atlantean Arthur Curry, Aquaman discovers if he is worthy of who he was born to be... a king.</string>
    <string name="aquaman">Aquaman</string>
    <string name="atime">2 h 23 m</string>
    <string name="agen">Mystery</string>
    <string name="marvel">Captain Marvel</string>
    <string name="mgen">Adventure</string>
    <string name="marvel_intro">Intro: Carol Danvers becomes one of the universe most powerful heroes when Earth is caught in the middle of a galactic war.</string>
    <string name="mtime">2 h 4 m</string>
    <string name="dragon">How to Train Your Dragon</string>
    <string name="dgen">Animation</string>
    <string name="d_intro">When Hiccup discovers Toothless is not the only Night Fury, he must seek "The Hidden World", a secret Dragon Utopia.</string>
    <string name="dtime">1 h 44 m</string>

    <string name="purchase_name">Purchase</string>
    <string name="adult">ADULT(14-64)</string>
    <string name="children">CHILDREN(3-13)</string>
    <string name="adultPrice">CA $13.75</string>
    <string name="childrenPrice">CA $9.95</string>
    <string name="total">TOTAL: CA $</string>

    <string-array name="numberOfTickets">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
