<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowtimeActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_activity_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:text="@string/showtime"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imagehead"
        android:layout_width="459dp"
        android:layout_height="152dp"
        android:layout_gravity="top"
        android:src="@drawable/dragon_head" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="120dp"
            android:layout_height="135dp"
            android:layout_gravity="top"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="450dp"
            android:layout_gravity="left"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showtime1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showtime2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showtime3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showtime4" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/showtime5" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="53dp"
            android:layout_marginTop="173dp"
            android:text="@string/aquaman"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="64dp"
            android:layout_height="20dp"
            android:layout_below="@+id/txtName"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="9dp"
            android:text="@string/atime" />

        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtTime"
            android:layout_marginStart="114dp"
            android:layout_marginTop="0dp"
            android:text="@string/agen" />

        <TextView
            android:id="@+id/txtIntro"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:layout_alignStart="@+id/imageAvatar"
            android:layout_marginStart="3dp"
            android:layout_marginTop="42dp"
            android:text="@string/atime" />

        <!--        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="201dp"
            android:layout_height="52dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="7dp"
            app:srcCompat="@drawable/next"/>-->
    </RelativeLayout>


</LinearLayout>