<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_activity_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:text="Purchase"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/logo" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="390dp"
        android:layout_height="300dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="36dp"
            android:text="@string/childrenPrice"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/checkBoxChildren"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAdult" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="143dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/txtvPrice"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <CheckBox
            android:id="@+id/checkBoxAdult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="63dp"
            android:layout_marginBottom="124dp"
            android:text="@string/adult"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBoxChildren"
            android:layout_width="142dp"
            android:layout_height="0dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="164dp"
            android:layout_marginBottom="74dp"
            android:text="@string/children"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="75dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBoxAdult"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="118dp"
            android:layout_marginBottom="18dp"
            android:text="@string/adultPrice"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxChildren"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="89dp"
            android:layout_height="0dp"
            android:layout_marginStart="162dp"
            android:layout_marginEnd="12dp"
            android:text="@string/total"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtvPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxChildren" />

        <TextView
            android:id="@+id/txtvPrice"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="73dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Proceed"
            android:background="@drawable/button_boarder"
            android:onClick="checkOut"/>
    </LinearLayout>

</LinearLayout>